--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="wrap">
 	<header>스마트 챌린지 캠페인</header>
 	<section>
-	<a href="./promise_chek.pdf" style="display:block; margin:auto; text-align:center;">중독체크리스트download</a>
+	<a href="./overchek.pdf" style="display:block; margin:auto; text-align:center;">중독체크리스트download</a>
 	</section>
 	</div>
 
